# vulkan-engine

./: .gitignore  CMakeLists.txt  README.md  compile_shaders.bash  compile_shaders.ps1  font-texture-generator.html  imgui.ini  run.ps1
include/: HelloTriangle.hpp
include/VulkanMemoryAllocator/: vk_mem_alloc.h
include/tiny_obj_loader/: tiny_obj_loader.h
shaders/: default.frag  default.vert  deferred.comp  frag.spv  frag2d.spv  grayscale.spv  rend2d.frag  rend2d.vert  skybox.frag  skybox.vert  skyboxfrag.spv  skyboxvert.spv  text.frag  text.vert  textfrag.spv  textvert.spv  tonemap.spv  vert.spv  vert2d.spv
shaders/filters/: bloom_downsample.comp  bloom_downsample.spv  bloom_upsample.comp  bloom_upsample.spv  fxaa.comp  grayscale.comp  grayscale.spv  tonemap.comp  tonemap.spv
shaders/src/: grayscale.comp  skybox.vert  test.frag  test.vert  text.frag  text.vert  tonemap.comp  vert2d.vert
src/: Camera.cpp  Camera.hpp  Engine.cpp  Engine.hpp  HelloTriangle.hpp  Utils.hpp  Window.cpp  Window.hpp
src/default/: BasicCamera.cpp  BasicCamera.hpp  DefaultDeferredShader.cpp  DefaultDeferredShader.hpp  DefaultPipeline.cpp  DefaultPipeline.hpp  Skybox.cpp  Skybox.hpp
src/renderer/: DefaultPipeline.cpp  DefaultPipeline.hpp  DeferredShader.cpp  DeferredShader.hpp  FilterPipeline.cpp  FilterPipeline.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  ImGuiRenderer.cpp  ImGuiRenderer.hpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Skybox.cpp  Skybox.hpp  TBuffer.hpp  TGraphicsPipeline.hpp  TUniformBuffer.hpp  TVertexArray.hpp  TextRenderer.cpp  TextRenderer.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp
src/renderer/ui/: Renderer2d.cpp  Renderer2d.hpp  TextRenderer.cpp  TextRenderer.hpp  UIRenderer.cpp  UIRenderer.hpp
src/renderer/vulkan/: Descriptors.hpp  VmaUsage.cpp  VulkanConstants.h  VulkanHelpers.cpp  VulkanHelpers.hpp  VulkanTypes.h
src/ui/: Renderer2d.cpp  Renderer2d.hpp  TextRenderer.cpp  TextRenderer.hpp  UIManager.cpp  UIManager.hpp
test/: test.cpp
test/res/: font.json
